# AI_Essay

./: .env.example  .gitignore  CLAUDE.md  HAPPYPATH.md  KNOWN_ISSUES.md  QUICKSTART.md  ROADMAP.md  ReadMe.md  config.yaml  config.yaml.example  directions.md  pyproject.toml  requirements.txt  run_experiment.py  test_api.py
Source and Results/gpt/batch1/: Q1.txt  Q2.txt  Q3.txt  Q4.txt  gpt.py
Source and Results/gpt/batch2/: essay.txt  g  log.txt  thesis.txt
Source and Results/gpt/batch3/: essay.txt  log.txt  thesis.txt
Source and Results/gpt/batch4/: essay.txt  gpt.py  log.txt  thesis.txt
Source and Results/gpt/batch5/: gpt.py  log.txt  topic.txt
examples/: argument_test.txt  test_essay.txt  verification_essay.txt
src/: __init__.py  analyzer.py  argument.py  citations.py  config.py  drafter.py  essay.py  exceptions.py  experiment.py  export.py  improver.py  metrics.py  optimizer.py  outline.py  research.py  templates.py  utils.py  wizard.py
src/models/: __init__.py  base.py  openrouter.py
src/templates/: argumentative.yaml  research_paper.yaml
tests/: conftest.py  test_analyzer.py  test_argument.py  test_argument_robustness.py  test_citations.py  test_drafter.py  test_improver.py  test_integration.py  test_models.py  test_optimizer.py  test_optimizer_robustness.py  test_outline.py  test_phase3_completion.py  test_research.py
